BARC UAT/src/objects/Return_Receipt__c.object
<CustomObject>
    <fields>
        <fullName>Build_To_Address__c</fullName>
        <label>Build To Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_To_Email__c</fullName>
        <label>Build To Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_To_Name__c</fullName>
        <label>Build To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_To_Phone__c</fullName>
        <label>Build To Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Challan_Date__c</fullName>
        <label>Challan Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Challan_No__c</fullName>
        <label>Challan No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRN_Date__c</fullName>
        <label>GRN Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRN_No__c</fullName>
        <label>GRN No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L_R_No__c</fullName>
        <label>L R No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Return_No__c</fullName>
        <label>Purchase Return No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <label>Ship To Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Email__c</fullName>
        <label>Ship To Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Name__c</fullName>
        <label>Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Phone__c</fullName>
        <label>Ship To Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_Site__c</fullName>
        <label>Warehouse Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Return Receipt</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RR-{0}</displayFormat>
        <label>Return Receipt No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return Receipt</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>